2022-11-29T16:27:20Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3576030408 # 660
* notice: last 14d: unq all: 6 15
* notice: prev accum: outdated-unq outdated-all / unq all: 162 632 / 168 647
* notice: next accum: outdated-unq outdated-all / unq all: 163 633 / 169 648
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-11-15] / [2022-11-29]

2022-11-28T16:22:29Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3566664174 # 657
* notice: last 14d: unq all: 6 15
* notice: prev accum: outdated-unq outdated-all / unq all: 161 631 / 167 645
* notice: next accum: outdated-unq outdated-all / unq all: 162 632 / 168 647
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2022-11-14] / [2022-11-28]

2022-11-27T16:25:17Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3559023048 # 654
* notice: last 14d: unq all: 6 14
* notice: prev accum: outdated-unq outdated-all / unq all: 160 630 / 166 644
* notice: next accum: outdated-unq outdated-all / unq all: 161 631 / 167 645
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2022-11-13] / [2022-11-27]

2022-11-25T16:26:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3549442474 # 648
* notice: last 14d: unq all: 6 14
* notice: prev accum: outdated-unq outdated-all / unq all: 157 623 / 164 639
* notice: next accum: outdated-unq outdated-all / unq all: 160 630 / 166 644
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-11] / []

2022-11-25T08:24:06Z: