@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-17T01:54:19Z",
-  "count" : 9,
+  "timestamp" : "2022-11-30T01:40:45Z",
+  "count" : 5,
   "count_minmax" : [ 4, 9 ],
-  "count_decinc" : [ -0, +9 ],
+  "count_decinc" : [ -4, +9 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
