@@ -1,10 +1,10 @@
 {
-  "count": 15,
+  "count": 11,
   "uniques": 6,
   "views": [
     {
       "timestamp": "2022-11-16T00:00:00Z",
-      "count": 9,
+      "count": 5,
       "uniques": 2
     },
     {
