@@ -1,3 +1,11 @@
+2022-11-30T01:40:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3579545016 # 661
+* notice: last 14d: unq all: 6 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 163 633 / 169 648
+* notice: next accum: outdated-unq outdated-all / unq all: 163 633 / 169 644
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -4 / +2 +9 -0 -4 / 2 5
+* notice: removed / changed dates: [] / [2022-11-16]
+
 2022-11-29T16:27:20Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3576030408 # 660
 * notice: last 14d: unq all: 6 15
